# E.Practice

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/: CODEOWNERS
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  elia_capability_manifest.json  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: practice_0001_create_practice_tables.py  practice_0002_create_practice_tasks.py  practice_0003_create_practice_document_requests.py
backend/app/: __init__.py  config.py  constants.py  db.py  deps.py  logging_setup.py  main.py  provisioning.py
backend/app/clients/: __init__.py  contact_mapper.py  contacts_client.py
backend/app/models/: __init__.py  activity_log.py  attachment.py  category.py  client.py  contact.py  document_request.py  label.py  note.py  phase_template.py  practice.py  practice_event.py  practice_phase.py  reminder.py  requests.py  task.py  user.py
backend/app/repositories/: __init__.py  base.py  memory.py  seed_loader.py  sql.py
backend/app/routers/: __init__.py  _helpers.py  activity.py  attachments.py  categories.py  clients.py  contacts.py  dashboard.py  document_requests.py  events.py  internal.py  notes.py  phases.py  practices.py  reminders.py  search.py  session.py  tasks.py  templates.py  users.py
backend/app/services/: __init__.py  activity_service.py  mcp_safety.py  practice_service.py  tokenize.py
backend/scripts/: demo_smoke.py  dump_openapi.py  load_seed_to_sql.py  migrate_clients_to_econtacts.py  seed_phases_for_existing_practices.py  usability_test.py
backend/tests/routers/: test_attachments.py  test_contacts.py  test_document_requests.py  test_events.py  test_internal_provisioning.py  test_notes.py  test_practices_polymorphic.py  test_tasks.py  test_users.py
backend/tests/services/: test_capability_manifest.py  test_mcp_safety.py  test_practice_service.py
data/: README.md  seed.json
docs/: README.md  deploy.md  report-ux-for-ework.md  status-2026-05-12.md  status-2026-05-15-16.md  (+6 more)
(+79 files in other folders)
