[project]
name = "e-practice-backend"
version = "0.0.1"
description = "Modulo case management E.Practice della suite E.Work — backend FastAPI V0 (in-memory)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Davide Torchio / ExcellIA" }]

dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "pydantic==2.10.*",
    "pydantic-settings==2.7.*",
    "structlog==24.4.*",
    "python-multipart==0.0.20",
    "httpx==0.28.*",
    "alembic==1.14.*",
    "SQLAlchemy==2.0.36",
    "asyncpg==0.30.0",
    "greenlet==3.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.7.*",
    "mypy==1.13.*",
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# --- Ruff: lint + format ---
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line-too-long (delegato al formatter)
    "B008",  # function-call-in-default-argument (FastAPI Depends pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Mypy: type check ---
[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
